--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/proxsuite
-	previous = 
-	base = 033dd0e
+	previous = 033dd0e
+	base = eba8d87
 	trim = 
 	trimbase = 
